sample/hello-world/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    istio-injection: enabled
