sample/hello-world/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: hello
spec:
  selector:
    app: helloworld
  ports:
    - port: 80
      targetPort: 5678
