sample/hello-world/04-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: helloworld-gateway
  namespace: hello
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "helloworld.lab3.sitenotfound.co.uk"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: lab-wildcard-tls
      hosts:
        - "helloworld.lab3.sitenotfound.co.uk"
